fixup! align the titles.

--- a/core/src/scss/components/local-footer/_local-footer.scss
+++ b/core/src/scss/components/local-footer/_local-footer.scss
@@ -232,6 +232,7 @@
 // ------------------------------------------------
 .su-local-footer__list-heading {
   font-size: 18px;
+  line-height: 140%;
 }
 
 // Common styles for address and links.
